versioned_docs/version-7.4.0/api/flattenEach.mdx
---
title: flattenEach
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

### Description

Iterate over flattened features in any GeoJSON object, similar to
Array.forEach.

### Parameters

| Name     | Type                                                                                                                                                                                                                                                                                                                                                                                                                                                | Description                                                           |
| -------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- |
| geojson  | **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3) &#124; [Feature](https://tools.ietf.org/html/rfc7946#section-3.2) &#124; [GeometryObject](https://tools.ietf.org/html/rfc7946#section-3.1) &#124; [GeometryCollection](https://tools.ietf.org/html/rfc7946#section-3.1.8) &#124; [Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[GeometryCollection](https://tools.ietf.org/html/rfc7946#section-3.1.8)&gt;** | any GeoJSON object                                                    |
| callback | **[flattenEachCallback](docs/api/types/flattenEachCallback.mdx)**                                                                                                                                                                                                                                                                                                                                                                                   | a method that takes (currentFeature, featureIndex, multiFeatureIndex) |

### Returns

**void**

### Examples

```javascript
var features = turf.featureCollection([
  turf.point([26, 37], { foo: "bar" }),
  turf.multiPoint(
    [
      [40, 30],
      [36, 53],
    ],
    { hello: "world" },
  ),
]);

turf.flattenEach(
  features,
  function (currentFeature, featureIndex, multiFeatureIndex) {
    //=currentFeature
    //=featureIndex
    //=multiFeatureIndex
  },
);
```

### Installation

```javascript
$ npm install @turf/meta

import { flattenEach } from "@turf/meta";
const result = flattenEach(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.flattenEach(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
